--- a/Presentation_ioslides.Rmd
+++ b/Presentation_ioslides.Rmd
@@ -15,10 +15,10 @@ output:
 ```{r setup, include=FALSE}
 Sys.setlocale("LC_CTYPE", "en_US.UTF-8")
 library(tidyverse)
-palette = c("dodgerblue","darkorange","hotpink","limegreen")
-# This is an R setup chunk, containing default options applied to all other chunks
+library(ggbio)
 library(knitr)
-# This sets the chunk default options
+palette = c("dodgerblue","darkorange","hotpink","limegreen")
+
 opts_chunk$set(collapse=TRUE, error=FALSE, prompt=TRUE)
 # This sets the chunk display theme
 thm <- knit_theme$get("acid")
@@ -572,7 +572,43 @@ ggplot(data = iris,
 
 ##Statistical transformations
 
+```{r, fig.align='center', fig.height=3.4, fig.width=6}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut))
+```
 
+Where ```count``` came from?
+
+##Statistical transformation
+
+```geom_bar()``` connected to ```stat_count()```
+
+Why you would like to use statistics?
+
+* You might want to override the default stat
+* You might want to override the default mapping from transformed variables to aesthetics
+* You might want to draw greater attention to the statistical transformation in your code
+
+##Statistical transformation - non-default stat
+
+Using barplot with existing height 
+
+```geom_bar(aes(x = x, y = y), stat = "identity")
+
+This overrides on the connection with ```stat_count()```
+
+##Statistical transformation - computed variables
+
+Every geom or stat has computed variables, which you can check with ```?geom_bar``` 
+
+Here:
+* ```count```
+* ```prop```
+
+```{r, fig.align='center', fig.height=2.4, fig.width=6}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, y = ..prop.., group = 1))
+```
 
 ##Coordinate system
 
@@ -585,6 +621,57 @@ ggplot(data = iris,
     + Polar coordinates
 * ```coord_trans()```
 * ```coord_map()```
+
+##Other useful ggplot commands
+
+* ```xlim()```, ```ylim()``` vs ```scale_*_continuous()``` and others
+* ```xlab()``` , ```ggtitle()```
+* ```labs(title = "TITLE", subtitle = "STT", caption = "CAPTION", x = "X title", y = "Y title")```
+* ```theme()``` and built-in ```theme_*()``` 
+
+##Extending ggplot - [ggedit](https://github.com/yonicd/ggedit/blob/master/README.md)
+
+Using manual theme settings with ```ggedit``` package
+
+Package is not perfect, still in development!
+
+```{r, eval = FALSE}
+install.packages("devtools")
+devtools::install_github("metrumresearchgroup/ggedit",subdir="ggedit")
+library(ggedit)
+
+plot = ggplot(data = DATA, aes(x = X,y = Y))
+updated_plot <- ggedit(plot)
+```
+
+##Extending ggplot - [ggbio](http://www.bioconductor.org/packages/release/bioc/vignettes/ggbio/inst/doc/ggbio.pdf)
+
+Visualization toolkits for genomic data
+
+```{r, eval=FALSE}
+source("https://bioconductor.org/biocLite.R")
+biocLite("ggbio")
+```
+
+* Ideograms
+* Tracks from GenomicRanges, EnsDb, etc,
+* Circular genomes, plots
+* Mutations, rearrangments, etc.
+
+##Extending ggplot - [ggtree](https://bioconductor.org/packages/release/bioc/vignettes/ggtree/inst/doc/ggtree.html)
+
+Visualization and annotation of phylogenetic trees
+
+```{r, eval=FALSE}
+source("https://bioconductor.org/biocLite.R")
+biocLite("ggtree")
+```
+
+* Tree data import
+* Several phylogram/cladogram styles
+* Advanced customization options
+* Manipulation of trees
+* Advanced annotation options
 
 ##Data transformation - dplyer
 
